# almixer

./: .hgignore  ALmixer.c  ALmixer.h  ALmixer_AndroidExtensions.c  ALmixer_AndroidExtensions.h  CMakeLists.txt  CircularQueue.c  CircularQueue.h  LinkedList.c  LinkedList.h  README.txt  SDL_ALmixer.c  SDL_ALmixer.h
CMakeModules/: FindMPG123.cmake  FindOgg.cmake  FindSDL2.cmake  FindTremor.cmake  FindVorbis.cmake  InitialCache_iOS.cmake  XcodeDefaults.cmake
CMakeSupport/: android.toolchain.cmake  gen_cmakeandroid.pl
EXAMPLES/: CMakeLists.txt  playsound.c  playstream.c
Isolated/: ALmixer_RWops.c  ALmixer_RWops.h  OpenSLES_Android.c  SimpleMutex.h  SimpleThread.h  SimpleThreadPosix.c  SimpleThreadWindows.c  SoundDecoder.c  SoundDecoder.h  SoundDecoder_Internal.h  WindowsMediaFoundation.cpp  WindowsMediaFoundation_IMFByteStreamRWops.hpp  coreaudio.c  tErrorLib.c  tErrorLib.h
Isolated/LGPL/: SDL_endian_minimal.h  SDL_sound_minimal.c  mpg123.c  oggtremor.c  oggvorbis.c  wav.c
Isolated/SDL/include/: ALmixer_begin_code.h  ALmixer_close_code.h  ALmixer_config_android.h  ALmixer_config_iphoneos.h  ALmixer_config_macosx.h  ALmixer_config_minimal.h  ALmixer_config_psp.h  ALmixer_config_windows.h  ALmixer_endian.h  ALmixer_stdinc.h  ALmixer_system.h
Isolated/SDL/src/: ALmixer_internal.h
Isolated/SDL/src/core/android/: ALmixer_android.c  ALmixer_android.h
Isolated/SDL/src/core/windows/: ALmixer_windows.c  ALmixer_windows.h
Isolated/SDL/src/file/: ALmixer_RWops.c
Isolated/SDL/src/file/cocoa/: ALmixer_rwopsbundlesupport.m
Isolated/SDL/src/stdlib/: ALmixer_malloc.c  ALmixer_stdlib.c  ALmixer_string.c
Isolated/luaal/: luaal.c
SWIG/: ALmixer.i  ALmixer_Callback.i  al.i  al_javascript_jscore.i  al_javascript_v8.i
SWIG/javascript/: almixer.js
SWIG/lua/: ALmixer_init.lua
Xcode/Mac/ALmixer/: ALmixer-Info.plist
Xcode/Mac/ALmixer.xcodeproj/: project.pbxproj
Xcode/Mac/ALmixerSDL.xcodeproj/: project.pbxproj
Xcode/Mac/playstream/: AppDelegate.h  AppDelegate.m  main.m  playstream-Info.plist  playstream-Prefix.pch
Xcode/Mac/playstream/en.lproj/: MainMenu.xib
Xcode/iOS/ALmixer.xcodeproj/: project.pbxproj
Xcode/iOS/playstream/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m  playstream-Info.plist  playstream-Prefix.pch
Xcode/iOS/playstream/Shaders/: Shader.fsh  Shader.vsh
android/BuildScripts/: README.txt  build_module.sh  clean_all.sh  dist_make.sh  invoke_make.sh  purge_all.sh
android/CMakeSupport/: InitialCache_Android.cmake  gen_cmakeandroid_almixer.pl
android/module/: Android.mk
doc/: ALmixer.doxyfile.cmake  GarbageCollection.md  playcontrol.footer
etc/SWIG/: ALmixer.i  ALmixer_Callback.i  ALmixer_RWops.i  JSCore_fragment.i  al.i
etc/SWIG/bootstrap/javascript/: almixer.js
etc/SWIG/bootstrap/lua/: ALmixer_Init.lua
etc/SWIG/lua/: ALmixer_init.lua
etc/luaal/: CMakeLists.txt  luaal.c  luaal.def
etc/luaal/AndroidCMake/: Android.mk  InitialCache_Android.cmake  README.txt  genproj_android.pl  make_ndk.sh
etc/luaal/CMakeModules/: FindLua53.cmake  InitialCache_Lua_f32i32_iOS.cmake
include/: ALmixer.h  ALmixer_PlatformExtensions.h  ALmixer_RWops.h
src/: ALmixer.c  ALmixer_AndroidExtensions.c  CircularQueue.c  CircularQueue.h  LinkedList.h  tErrorLib.h
src/StandAlone/: SimpleMutex.c  SimpleMutex.h  SimpleThread.h  SimpleThreadPosix.c  SimpleThreadWindows.c
src/StandAlone/SDL/include/: ALmixer_config.h  ALmixer_config_minimal.h  ALmixer_config_pandora.h  ALmixer_config_winrt.h  ALmixer_config_wiz.h  ALmixer_endian.h  ALmixer_platform.h  ALmixer_stdinc.h
src/StandAlone/SDL/src/core/android/: ALmixer_android.c
src/StandAlone/SDL/src/core/windows/: ALmixer_windows.c  ALmixer_windows.h
src/StandAlone/SDL/src/file/: ALmixer_RWops.c
src/StandAlone/SDL/src/file/cocoa/: ALmixer_rwopsbundlesupport.h
src/StandAlone/SDL/src/stdlib/: ALmixer_getenv.c  ALmixer_iconv.c  ALmixer_stdlib.c  ALmixer_string.c
src/StandAlone/SoundDecoder/: SoundDecoder.h  SoundDecoder_Internal.h  WindowsMediaFoundation.cpp  WindowsMediaFoundation_IMFByteStreamRWops.cpp  WindowsMediaFoundation_IMFByteStreamRWops.hpp
src/StandAlone/SoundDecoder/LGPL/: SDL_sound_minimal.c  mpg123.c  oggtremor.c  oggvorbis.c  wav.c
tests/: AppDelegate_QuitWithoutFreeData.m
